# arc-check

./: .cruft.json  README.md  pyproject.toml
src/arc_check/: auth.py
src/arc_check/cli/: __init__.py
tests/: test_auth.py  test_cli.py
